[gd_scene load_steps=3 format=3 uid="uid://b8n4x5y6z7a1b2c3d"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://c4d5e6f7g8h9i0j1k" path="res://scenes/StepCounter.tscn" id="2_stepcounter"]
[ext_resource type="PackedScene" uid="uid://d6e7f8g9h0i1j2k3l" path="res://scenes/LifeIndicator.tscn" id="3_lifeindicator"]
[ext_resource type="PackedScene" uid="uid://p1l2a3y4e5r6t7u8i" path="res://scenes/Player.tscn" id="4_player"]
[ext_resource type="PackedScene" uid="uid://s1t2e3p4c5o6n7f8g" path="res://scenes/StepConfig.tscn" id="5_stepconfig"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Player" parent="." instance=ExtResource("4_player")]
position = Vector2(960, 540)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StepCounter" parent="CanvasLayer" instance=ExtResource("2_stepcounter")]

[node name="LifeIndicator" parent="CanvasLayer" instance=ExtResource("3_lifeindicator")]
offset_top = 60.0
offset_bottom = 120.0

[node name="StepConfig" parent="CanvasLayer" instance=ExtResource("5_stepconfig")]

[node name="Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 126.0
text = "Hello, Godot!"
horizontal_alignment = 1
vertical_alignment = 1